welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDRBuggle:5: error: '(' expected but identifier found.
	if litMessage == 'R' {droite(); avance()}
           ^BDRBuggle:6: error: '(' expected but identifier found.
	if litMessage == 'L' {gauche(); avance()}
           ^BDRBuggle:7: error: '(' expected but identifier found.
	if litMessage == 'I' {droite(); droite(); avance()]
           ^BDRBuggle:16: error: illegal start of simple expression
	} 
        ^